# AutoCode

./: README.md  pyproject.toml
src/autocode/: __main__.py  agents.py  checks.py  cli.py  config.py  git_ops.py  models.py  orchestrator.py  simple_yaml.py  specs.py  state.py
tests/: test_orchestrator.py  test_specs.py  test_state.py
